2010-02-20 Jerome Pasquier  <rainbru@free.fr>

	* configure.in: Removed --enable-all option.
	* acinclude.m4 (RB_OPTION_ALL): Code moved to m4/.
	* src/Makefile.am: Remove RB_OPTION_ALL_FLAG usage.

	* configure.in: Configuration summary moved to m4/rb_summary.m4.
	* m4/rb_summary.m4: file created.

	* configure.in: Changes due to sources moved to src/.
	* Makefile.in: Changes due to sources moved to src/.
	* src/Makefile.in: Changes due to sources moved to src/.
	

2010-02-19 Jerome Pasquier  <rainbru@free.fr>

	* configure.in (AC_CONFIG_FILES): Added src/ to moved sources.
	* src/ogreGui/Drawable: Handle RB_DIRTY_FLAG from config.h.
	* Makefile.am: Changes conditionnal due to move to src/.
	* src/Makefile.am: Changes conditionnal due to move to src/.
	
2010-02-17 Jerome Pasquier  <rainbru@free.fr>

	* Doxyfile.in (EXCLUDE): Now excludes src/oldOgreGui/ directory.
	* bootstrap: aclocal now called with '-I m4/' option.
	
2010-02-16 Jerome Pasquier  <rainbru@free.fr>

	* Makefile.am: Changes for tools/ to src/tools/ directory.
	
	* configure.in: Changes due to sources moves to src/.
	* Makefile.am (SUBDIRS): Moved some sources to src/.
	* src/Makefile.am (SUBDIRS): Moved some sources from ../.
	* common/Makefile.am (INCLUDES): Makes maincore includes works again.
	* client/Makefile.am (INCLUDES): Makes maincore includes works again.

	* acinclude.m4 (RB_OPTION_DIRTYFLAG): Trying to implement an option to
	disable OgreGui's dirty flag but doesn't work as expected.

	* acinclude.m4 (RB_OPTION_DIRTYFLAG): Some changes makes this working.

2010-02-15 Jerome Pasquier  <rainbru@free.fr>

	* configure.in (AC_CONFIG_FILES): tools/ directory's Makefiles prepend
	with src/.
	
2010-02-13 Jerome Pasquier  <rainbru@free.fr>

	* acinclude.m4 (RB_CHECK_OGREMAIN): Added -lintl if
	cross-compilation (fix undefined reference).
	
2010-02-12 Jerome Pasquier  <rainbru@free.fr>

	* Makefile.am (SUBDIRS): Replaced oldOgreGui by ogreGui.
	* ogreGui/Makefile.am: Created.