@@ -60,7 +60,7 @@ cc_sources=dumpogreobject.cpp		\
 library_includedir=$(includedir)/$(GENERIC_LIBRARY_NAME)/$(LIB_CORE_NAME)
 library_include_HEADERS = $(h_sources)
 
-INCLUDES= -I$(top_srcdir)/common			\
+INCLUDES= -I$(top_srcdir)/src/common			\
 	  -I$(top_srcdir)/ext				\
 	  $(OGRE_CFLAGS)				\
 	  $(OIS_CFLAGS)					\
@@ -77,10 +77,10 @@ librainbrurpg_core_la_LIBADD= -lrainbrurpg-common	\
 librainbrurpg_core_la_LDFLAGS=				\
   $(SHARED_FLAG) -version-info 		       		\
   $(CORE_LIBRARY_VERSION)   		       		\
-  -L$(top_srcdir)/common/.libs 		       		\
+  -L$(top_srcdir)/src/common/	 		       	\
   -Wl,--rpath		       		       		\
-  -Wl,$(top_srcdir)/common/.libs	       		\
   $(SIGC_LIBS)
+#  -Wl,$(top_srcdir)/src/common/		       		
 
 
 dll:
